feat(app): Updated nginx config

--- a/roles/deploy/services/nginx/nginx.conf.j2
+++ b/roles/deploy/services/nginx/nginx.conf.j2
@@ -19,6 +19,10 @@ http {
 		location /uploads {
 			proxy_pass http://api:3000/uploads;
 		}
+
+		location /assets {
+			proxy_pass http://api:3000/assets;
+		}
 	}
 }
 
