refactor(app): Updated .env

--- a/roles/deploy/services/api/.env.j2
+++ b/roles/deploy/services/api/.env.j2
@@ -3,7 +3,8 @@ POSTGRES_USER="{{ env.database.user }}"
 POSTGRES_PASSWORD="{{ env.database.password }}"
 POSTGRES_DB="{{ env.database.db_name }}"
 
-API_DOMAIN = "{{ env.api_host }}"
+API_HOST = "{{ env.api_host }}"
+DOMAIN = "{{ env.https_host }}"
 
 SECRET = "{{ env.api.secret }}"
 
@@ -12,3 +13,7 @@ GOOGLE_CLIENT_SECRET="{{ env.api.google_client_key }}"
 
 VK_CLIENT_ID="{{ env.api.vk_client_id }}"
 VK_CLIENT_SECRET="{{ env.api.vk_client_key }}"
+
+BOT_TOKEN="{{ env.api.bot_token }}"
+
+MOBILE_APP_URL="{{ env.api.mobile_app_url }}"
